--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "amstock3": "^3.21.15",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "node-sass": "^6.0.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3",
@@ -32,9 +33,10 @@
     "chai": "^4.2.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.13.0",
+    "sass": "^1.38.0",
     "sass-loader": "^7.3.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0"
   },
   "bugs": {
     "url": "https://github.com/JayeshLab/vue-crypto-dashboard/issues"
